@@ -46,6 +46,7 @@
   </div>
 </div>
 
+<% if false %>
 <div class="control-group checkbox">
   <div class="controls">
     <%= f.check_box :tge %>
@@ -53,6 +54,7 @@
     <span class="help-block">Please note that only citizens and permanent residents are eligible for training grant support</span>
   </div>
 </div>
+<% end %>
 
 <div class="control-group">
   <%= f.label :citizenship_status, nil, class: 'control-label' %>
